2015-12-02  Natalia Portillo  <claunia@claunia.com>

	* DVD/Cartridge.cs:
	  Implemented decoding DVD-RAM medium status.

2015-12-02  Natalia Portillo  <claunia@claunia.com>

	* DVD/DDS.cs:
	  Added DDS decoding.

2015-12-01  Natalia Portillo  <claunia@claunia.com>

	* DVD/CSS&CPRM.cs:
	  Must return value.

2015-12-01  Natalia Portillo  <claunia@claunia.com>

	* DVD/CSS&CPRM.cs:
	  Added decoding Lead-In CMI for DVD.

2015-12-01  Natalia Portillo  <claunia@claunia.com>

	* Blu-ray/DI.cs:
	* Blu-ray/BD.cs:
	* Blu-ray/BCA.cs:
	* Blu-ray/DDS.cs:
	* Blu-ray/Spare.cs:
	* Blu-ray/Cartridge.cs:
	* DiscImageChef.Decoders.csproj:
	  Separated blu-ray structure decoders.

2015-12-01  Natalia Portillo  <claunia@claunia.com>

	* DVD/PFI.cs:
	  Added PFI decoding.

2015-11-27  Natalia Portillo  <claunia@claunia.com>

	* DVD/PFI.cs:
	  Solved repeated field names.

2015-11-27  Natalia Portillo  <claunia@claunia.com>

	* DVD/PFI.cs:
	  Added PFI information from all ECMA standards.

2015-11-24  Natalia Portillo  <claunia@claunia.com>

	* SCSI/MMC/OPW.cs:
	* SCSI/MMC/TrackInformation.cs:
	* DiscImageChef.Decoders.csproj:
	  Reorganized media-info command so only applicable
	  information is requested based on what we are being informed
	  about media type.

2015-11-24  Natalia Portillo  <claunia@claunia.com>

	* SCSI/MMC/DiscInformation.cs:
	  Added decoding and prettifying READ DISC INFORMATION.

2015-11-24  Natalia Portillo  <claunia@claunia.com>

	* CD/ATIP.cs:
	  ATIP not always contain S4.
	Corrected typo.

	* CD/Session.cs:
	  Added missing newlines.

	* CD/TOC.cs:
	  Added missing newlines.
	Recognize Lead-Out track.

	* SCSI/MMC/DiscInformation.cs:
	  Added structures for Disc Informations 001b and 010b.

2015-11-23  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Sense.cs:
	  Typo

2015-11-23  Natalia Portillo  <claunia@claunia.com>

	* ATA/Errors.cs:
	* DiscImageChef.Decoders.csproj:
	  Moved ATA register definition to a more common place.

	* SCSI/Sense.cs: