@@ -1,5 +1,10 @@
 2015-12-02  Natalia Portillo  <claunia@claunia.com>
 
+	* DVD/Spare.cs:
+	  Implemented decoding DVD-RAM Spare Area Information.
+
+2015-12-02  Natalia Portillo  <claunia@claunia.com>
+
 	* DVD/Cartridge.cs:
 	  Implemented decoding DVD-RAM medium status.
 
